--- a/my-notebook/_toc.yml
+++ b/my-notebook/_toc.yml
@@ -4,7 +4,7 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
+- file: Datasets
 - file: notebooks
 - file: markdown-notebooks
 - file: Test
